# shopify-developer-challenge

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  insomnia.json  postman.json  sqlx-data.json
migrations/: 20220111034633_inventory.sql  20220111041418_non_null_description.sql  20220111052005_shipments.sql  20220111223012_shipment_status.sql  20220111225347_inventory_stock_non_negative_check.sql
src/: inventory.rs  logging.rs  main.rs  shipments.rs  util.rs
