[package]
name = "shopify-developer-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.3", features = ["http2", "json"] }
tower = { version = "0.4.11", default-features = false }
tower-http = { version = "0.2.0", default-features = false, features = ["request-id", "trace"] }

sqlx = { version = "0.5.10", features = ["macros", "postgres", "runtime-tokio-rustls"] }

color-eyre = { version = "0.5.11", default-features = false, features = ["track-caller"] }
dotenv = "0.15.0"
eyre = "0.6.5"

tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }
